# AI_Eng

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.claude/: settings.local.json
FastApi/: index.html  myapi.py
LanguageDetectionApp/: main.py
agent_templates/: react_agent.py  tool_use_agent.py
email-tone-classifier/: .env.example  .gitignore  README.md  pyproject.toml
email-tone-classifier/.claude/: settings.local.json
email-tone-classifier/eval/: dataset.yaml  promptfooconfig.yaml
email-tone-classifier/src/: __init__.py  classifier.py  demo.py  prompts.py
