[project]
name = "ai-eng"
version = "0.1.0"
description = "Lightweight space for testing AI eng tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langsmith>=0.4.25",
    "pathlib>=1.0.1",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
